# terraform-eks-homework

./: .gitignore  README.md  WORKSPACE  docker-compose.yaml
.github/workflows/: main.yml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
charts/nginx-ingress/: Chart.yaml
doc/health/: architecture.excalidraw
environments/staging/health/: BUILD.bazel  secrets.libsonnet.secret  vars.libsonnet
environments/staging/health/app/: BUILD.bazel  nginx-ingress.jsonnet
environments/staging/health/infra/: BUILD.bazel
environments/template/aws/: BUILD.bazel  cloudwatch_log_group.libsonnet  eip.libsonnet  eks_cluster.libsonnet  eks_node_group.libsonnet  example-main.tf.json  iam_role.libsonnet  iam_role_policy_attachment.libsonnet  internet_gateway.libsonnet  main.libsonnet  nat_gateway.libsonnet  route_table.libsonnet  route_table_association.libsonnet  security_group_rule.libsonnet  subnet.libsonnet  tags.libsonnet  vpc.libsonnet
environments/test/health/: BUILD.bazel  vars.libsonnet
environments/test/health/app/: BUILD.bazel  nginx-ingress.jsonnet
environments/test/health/infra/: BUILD.bazel  main.tf.jsonnet
tools/: delete-vpc.sh
