load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library", "jsonnet_to_json")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
package(default_visibility = ["//environments/test/health:__subpackages__"])

jsonnet_library(
    name = "secrets",
    srcs = [
        "secrets.libsonnet",
    ],
)
jsonnet_library(
    name = "vars",
    srcs = [
        "vars.libsonnet",
    ],
    deps = [":secrets"]
)
